option java_generic_services = true;
option java_package = "cn.slimsmart.protoc.demo.rpc"; 
option java_outer_classname = "Message";
message Request {
	// RPC service name  
	required string serviceName = 1;
	// RPC method name  default execute
    optional string methodName = 2;  
    // RPC params
    optional Params params = 3;
}

message Params {
	required string key = 1;
	optional string value = 2;
}

message Msg {
	optional string content = 1;
	extensions 100 to 999; 
 }

message Response {
	extend Msg {
		// RPC response code
		required int32 code =100 [default = 0];
		// RPC response code msg
		required string msg =101 [default = "请求成功"];
	}
}
//interface
service RpcService {
    rpc call(Request) returns (Response);
}